[package]
name = "pomyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
js-sys = "0.3"
gloo = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Notification", "NotificationOptions", "HtmlAudioElement", "Window", "Storage"] }
serde = "1.0"
serde_json = "1.0"
